...
          ? Padding(
              padding: const EdgeInsets.only(right: 4, bottom: 4),
              child: FloatingActionButton.extended(
                heroTag: 'createGroupFab',
                onPressed: _findBuddiesController.createGroup,
                icon: const Icon(Icons.add),
                label: const Text('สร้างก๊วน'),
              ),
            )
          : null,
    );
  }
}
...
